<resources>
    <string name="app_name">Medi-Screen</string>
    <string name="email">Email:</string>
    <string name="passwd">Password:</string>
    <string name="passwdRepeat">Confirm password:</string>
    <string name="login">Login</string>
    <string name="notReg">Not registered?</string>
    <string name="signUp">Sign up</string>
    <string name="logo">Logo</string>
    <string name="firstName">First name:</string>
    <string name="lastName">Last name:</string>
    <string name="gpAddress">GP address:</string>
    <string name="gpName">GP name:</string>
    <string name="setGP">Set GP</string>
    <string name="gpHead">Set your GP</string>
    <string name="gpPhone">GP phone number:</string>
    <string name="title_activity_insurance">InsuranceActivity</string>
    <string name="insureName">Insurer name:</string>
    <string name="setInsure">Set Insurer</string>
    <string name="insureHead">Set your insurer</string>
    <string name="insurePhone">Insurer phone-number:</string>
    <string name="setMedHis">Set Medical History</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Payment">Pay Insurance</string>
    <string name="MediAi">Medi-Ai</string>
    <string name="call">Request Professional</string>
    <string name="support">Support</string>
    <string name="rating">Ratings &amp; reviews</string>
    <string name="callHead">Call a professional </string>
    <string name="callGP">Call GP</string>
    <string name="callInsurer">Call Insurer</string>
    <string name="insureEmail">Insurer email:</string>
    <string name="gpEmail">GP email:</string>
    <string name="sendEmail">Write message here:</string>
    <string name="supportHead">Support</string>
    <string name="supportMid">Write an email to your GP or insurer.</string>
    <string name="sendGP">Send to GP</string>
    <string name="sendInsurer">Send to Insurer</string>
    <string name="ratingHead">Ratings &amp; Reviews</string>
    <string name="ratingMid">Send a rating and a review to the developers.</string>
    <string name="sendReview">Write review here:</string>
    <string name="send">Send</string>

</resources>
