<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportActivity">


    <EditText

        android:id="@+id/sendEmailEditText"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:hint="@string/sendEmail"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/suppportHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/supportHead"
        android:textColor="@color/colorPrimary"
        android:textSize="132px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/supportMid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/supportMid"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/sendEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suppportHead" />

    <Button
        android:id="@+id/sendGPButton"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/sendGP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendInsurerButton"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sendEmailEditText"
        app:layout_constraintVertical_bias="0.597" />

    <Button
        android:id="@+id/sendInsurerButton"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/sendInsurer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sendEmailEditText"
        app:layout_constraintVertical_bias="0.597" />


</androidx.constraintlayout.widget.ConstraintLayout>