<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity">


    <EditText

        android:id="@+id/sendRatingEditText"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:gravity="start"
        android:hint="@string/sendReview"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"></EditText>

    <TextView
        android:id="@+id/ratingHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@string/ratingHead"
        android:textColor="@color/colorPrimary"
        android:textSize="120px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/supportMid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ratingMid"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/sendRatingEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingHead"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendRatingEditText"
        app:layout_constraintVertical_bias="0.256" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@+id/sendRatingEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportMid"
        app:layout_constraintVertical_bias="0.539" />


</androidx.constraintlayout.widget.ConstraintLayout>