<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallActivity">

    <Button
        android:id="@+id/callGPButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:text="@string/callGP"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/callInsurerButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:text="@string/callInsurer"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callGPButton"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/callHEad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callHead"
        android:textColor="@color/colorPrimary"
        android:textSize="118px"
        app:layout_constraintBottom_toTopOf="@+id/callGPButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />
</androidx.constraintlayout.widget.ConstraintLayout>